
- #11446: document switch compilation (lambda/switch.ml)
  (Gabriel Scherer, review by Luc Maranget and Vincent Laviron)

- #11601, #11612: Clean up some global state handling in emitcode, spill.
  (Hugo Heuzard, Stefan Muenzel review by Vincent Laviron and Gabriel Scherer)

- #11627: use return values instead of globals for linear scan intervals
  (Stefan Muenzel, review by Nicolás Ojeda Bär)

### Build system:

### Bug fixes:

- #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
  when they are not regular files.
  (Xavier Leroy, report by Thierry Martinez, review by
   Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #10348: Expand GADT equations lazily during unification to avoid ambiguity
  (Jacques Garrigue, review by Leo White)

- #11436: Fix wrong stack backtrace for out-of-bound exceptions raised
  by leaf functions.
  (Tom Kelly and Xavier Leroy, review by Mark Shinwell)

OCaml 5.0
---------

### Language features:

### Runtime system:

- #11400: Runtime events counters fixes
  Fixes mismatch between OCaml and C APIs, removes events from 4.x that
  are not present in the 5.0 GC and adds some missing probes.
  (Sadiq Jaffer, review by Gabriel Scherer, Florian Angeletti)

- #11368: Runtime events buffer size OCAMLRUNPARAMS fix
  The runtime events buffer size can now be set via the 'e' OCAMLRUNPARAM.
  This is previously mistakenly enabled/disabled tracing instead.
  (Sadiq Jaffer, review by KC Sivaramakrishnan, David Allsopp, Damien Doligez)

- #11308: Add environment variable to preserve runtime_events after exit
  If the environment variable OCAML_RUNTIME_EVENTS_PRESERVE exists then the
  runtime will not remove the runtime events ring buffers at exit. This
  makes tracing very short running programs more reliable.
  (Sadiq Jaffer, review by KC Sivaramakrishnan)

- #10964: Ring-buffer based runtime tracing (runtime_events)
  Runtime_events is a very low overhead runtime tracing system designed for